syntax = "proto3";

package helloworld;

service Greeter {
  // 一元RPC
  rpc SayHello (HelloRequest) returns (HelloReply) {}
  // 服务端流式RPC
  rpc SayList (HelloRequest) returns (stream HelloReply) {}
}

message HelloRequest {
  string name = 1;
}

message HelloReply {
  string message = 1;
}